blocks/columns/columns.css
.columns > div {
    display: flex;
    flex-direction: column;
    gap: 32px;
    margin: 48px 0;
}

.columns.revese-odd-rows-on-mobile > div:nth-of-type(odd) {
    flex-direction: column-reverse;
}

.columns img {
    width: 100%;
}

.columns.center {
    text-align: center;
}

@media (min-width: 900px) {
    .columns > div {
        display: flex;
        flex-direction: unset !important;
    }

    .columns > div > div {
        flex: 1;
    }

    .columns ul.cta-list {
        justify-content: unset;
    }

    .columns ul.cta-list li {
        flex: 1;
        min-width: 242px;
        padding-left: 0;
        text-align: left;
    }

    .columns ul.cta-list.inline li {
        min-width: unset;
        flex: 0;
        padding-right: 10px;
    }
}

